# osdu-sdk-python

./: .gitignore  LICENSE.md  README.md  README.rst  nose2.cfg  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yml  pre-release.yml  release.yml
examples/: example.py
scripts/: license_verify.py  license_verify_pylint.py  verify.bat  verify.sh
scripts/ci/: extract_version.sh
src/osdu/: __init__.py  client.py  serviceclientbase.py
src/osdu/entitlements/: __init__.py  _client.py
src/osdu/identity/: __init__.py  consts.py  exceptions.py
src/osdu/identity/_credential/: __init__.py  base.py  environment.py  msal_interactive.py  msal_non_interactive.py  token.py
src/osdu/search/: __init__.py  _client.py
tests/: __init__.py  test_client.py  test_serviceclientbase.py
tests/entitlements/: test_entitlements.py
tests/identity/: test_environment.py  test_msal_client_credentials.py  test_msal_interactive.py  test_token.py
tests/search/: __init__.py  test_search.py
